--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
           context: ./src
           dockerfile: ./src/Dockerfile
           push: true
-          tag: estrongbelgier/rotten-potatoes:latest
+          tag: estrongbelgier/rotten-potatoes:v2
             estrongbelgier/rotten-potatoes:${{ github.run_number  }} # posso usar várias formas de puxar um valor para versão.
