--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
           push: true
           tag: |
             estrongbelgier/rotten-potatoes:latest
-            estrongbelgier/rotten-potatoes:${{ github.run_number  }}
+            estrongbelgier/rotten-potatoes:v${{ github.run_number  }}
