--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,17 +12,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Docker Login
         uses: docker/login-action@v1.10.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Docker build and push
+
+      - name: Docker Build and Push
         uses: docker/build-push-action@v2.7.0
         with:
           context: ./src
-          dockerfile: ./src/Dockerfile
+          file: ./src/Dockerfile
           push: true
           tag: |
             estrongbelgier/rotten-potatoes:latest
-            estrongbelgier/rotten-potatoes:v${{ github.run_number  }}
+            estrongbelgier/rotten-potatoes:${{ github.run_number  }}
